# Task-Glacier

./: .gitignore
.github/workflows/: cmake-multi-platform.yml
backend/: CMakeLists.txt  generate_visual_studio_sln.bat  generate_visual_studio_sln_2022.bat  generate_visual_studio_sln_2026.bat  vcpkg-configuration.json
backend/exe/: CMakeLists.txt  main.cpp  packet_sender_impl.hpp
backend/exe/cli/: CMakeLists.txt  main.cpp
backend/exe/server/: CMakeLists.txt  main.cpp
backend/lib/: CMakeLists.txt  README.md  api.cpp  api.hpp  bugzilla.cpp  bugzilla.hpp  clock.hpp  curl.hpp  database.cpp  database.hpp  packet_sender.hpp  packets.cpp  packets.hpp  server.cpp  server.hpp
backend/lib/cli/: CMakeLists.txt  cli.cpp  cli.hpp
backend/lib/common/: CMakeLists.txt  clock.hpp  packets.cpp  packets.hpp
backend/lib/packets/: CMakeLists.txt  basic.hpp  bugzilla_info.hpp  bugzilla_instance_id.hpp  create_task.hpp  daily_report.hpp  error.hpp  failure_response.hpp  message.hpp  packet_builder.hpp  packet_parser.hpp  request.hpp  request_daily_report.hpp  request_id.hpp  request_weekly_report.hpp  success_response.hpp  task.hpp  task_id.hpp  task_info.hpp  task_state.hpp  task_state_change.hpp  task_times.hpp  time_category.hpp  time_category_id.hpp  time_category_mod_type.hpp  time_code.hpp  time_code_id.hpp  time_entry.hpp  time_entry_data_packet.hpp  time_entry_modify_packet.hpp  unpack_error.hpp  update_task.hpp  update_task_times.hpp  version.hpp  weekly_report.hpp
backend/lib/server/: CMakeLists.txt  api.cpp  api.hpp  server.cpp  server.hpp
backend/lib/server/include/: api.hpp  lib.hpp  packet_builder.hpp
backend/lib/server/src/: lib.cpp
backend/test/: CMakeLists.txt  api_test.cpp  bugzilla_test.cpp  message_compare.h  packet_test.cpp  sqlite_test.cpp  storage_test.cpp  test_clock.hpp  utils.h
backend/test/integration/: CMakeLists.txt  test.cpp
backend/test/unit/: CMakeLists.txt  api_test.cpp  packet_test.cpp  task_test.cpp
cli/: CMakeLists.txt
cli/lib/: CMakeLists.txt
cli/lib/include/: api.hpp  lib.h  lib.hpp  packets.hpp
cli/lib/src/: api.cpp  lib.cpp  packets.cpp
cli/main/: CMakeLists.txt  main.cpp  packets.hpp
cli/test/: CMakeLists.txt  api_test.cpp  packet_test.cpp  task_test.cpp
cmakepresets/: vcpkg.json
server/: CMakeLists.txt  api.hpp  persist.hpp  server.cpp  server.hpp
ui/: build.gradle.kts  create_installer.bat  layout.xml  settings.gradle.kts
ui/src/main/java/: AddTask.java  MainFrame.java  Settings.java  TasksLists.java  module-info.java
ui/src/main/java/config/: General.java  Labels.java  Sessions.java  TaskConfig.java  TimeEntry.java  TimeEntryDialog.java
ui/src/main/java/data/: ServerConnection.java  Standards.java  Task.java  TaskModel.java  TaskState.java  TimeData.java
ui/src/main/java/dialogs/: About.java  AddModifyTask.java  AddTask.java  Bugzilla.java  BugzillaConfiguration.java  ConnectToServer.java  EditLabels.java  EditTimes.java  LabeledComponent.java  RenameTask.java  RequestDailyReportDialog.java  RequestWeeklyReportDialog.java  SearchDialog.java  SessionEdit.java  Settings.java  TaskConfig.java  TaskIDFilter.java  TaskPicker.java  TaskPriority.java  TaskSearch.java  TimeCategories.java  TimeEntryConfiguration.java  UnspecifiedTask.java  UpdateSessionTimeCode.java
ui/src/main/java/net/byteseek/demo/treetable/: CSVTree.java  MyObject.java  MyObjectForm.java  MyObjectTreeTableModel.java
ui/src/main/java/net/byteseek/swing/treetable/: Comparators.java  TableUtils.java  TreeCellRenderer.java  TreeNodeComparator.java  TreeTableColumnSortStrategy.java  TreeTableHeaderRenderer.java  TreeTableModel.java  TreeTableModelObjectArray.java  TreeTableRowSorter.java  TreeUtils.java
ui/src/main/java/net/byteseek/utils/collections/: BlockModifyArrayList.java
ui/src/main/java/packets/: Basic.java  BugzillaInfo.java  BugzillaRefresh.java  CreateTask.java  DailyReportMessage.java  ErrorMessage.java  FailureResponse.java  Packet.java  PacketType.java  RequestConfig.java  RequestDailyReport.java  RequestID.java  RequestWeeklyReport.java  TaskInfo.java  TaskStateChange.java  TimeCategoriesData.java  TimeCategoriesMessage.java  TimeCategoryModType.java  TimeEntryData.java  TimeEntryModify.java  UpdateTask.java  UpdateTaskTimes.java  Version.java  WeeklyReport.java
ui/src/main/java/panels/: AltTasksList.java  DailyReportPanel.java  ParentTaskTreeTableNode.java  SchedulePanel.java  Search.java  StatusBar.java  SystemTrayDisplay.java  TaskContextMenu.java  TaskInfoSubPanel.java  TaskSearch.java  TaskTreeTableModel.java  TaskTreeTableNode.java  TasksList.java  TasksLists.java  TasksTreeTableModel.java  UndecoratedFrameExample.java  WeeklyReport.java  WeeklyReportPanel.java
ui/src/main/java/taskglacier/: MainFrame.java  MenuBar.java
ui/src/main/java/tray/: RecentActivity.java  Search.java  SystemTrayDailyReport.java  SystemTrayDisplay.java
ui/src/main/java/tree/: DailyReportTaskTreeTable.java  DailyReportTreeTable.java  DailyReportTreeTableModel.java  ElapsedTimeCellRenderer.java  ReportBuilder.java  TaskTreeTable.java  TaskTreeTableModel.java  WeeklyReportTreeTable.java  WeeklyReportTreeTableModel.java
ui/src/main/java/util/: CheckThreadViolationRepaintManager.java  DialogEscape.java  EdtViolationException.java  FailOnThreadViolationRepaintManager.java  Icons.java  LabeledComponent.java
ui/src/test/java/packets/: TaskInfoTest.java
